Move valid taz file to be more consistent

--- a/web/LA/index.html
+++ b/web/LA/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/leaflet.css" />
 
-<script src="/_LA/valid_taz.js"></script>
+<script src="/_LA/data/valid_taz.js"></script>
 <script src="/pico/client.js"></script>
 <script>pico.load("routing");</script>
 
