--- a/web/_LA/index.html
+++ b/web/_LA/index.html
@@ -23,7 +23,7 @@ body { height: 100%; margin: 0; padding: 0;}
 <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 <script src="shp.js"></script>
 <script src="catiline.js"></script>
-<script src="valid_taz.js"></script>
+<script src="data/valid_taz.js"></script>
 <script src="leaflet.shpfile.js"></script>
 <script>
 var count = 0;
