--- a/web/LA/index.html
+++ b/web/LA/index.html
@@ -6,7 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/leaflet.css" />
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="/_LA/data/valid_taz.js"></script>
+<script src="/LA/data/search.js"></script>
 <script src="/pico/client.js"></script>
 <script>pico.load("routing");</script>
 
@@ -36,6 +38,12 @@ body { height: 100%; margin: 0; padding: 0;}
   z-index: 99;
   text-align: center;
 }
+.search-ui {
+    position:absolute;
+    bottom:10px;
+    left:10px;
+    z-index:1000;
+}
 </style>
 </head>
 <body>
@@ -43,6 +51,7 @@ body { height: 100%; margin: 0; padding: 0;}
   <h1>Loading...</h1>
 </div>
 <div id="map"></div>
+<input id='search' class='search-ui' placeholder='Enter origin index' />
 <script src="index.js"></script>
 </body>
 </html>
